--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "jorenvanhocht/laravel-share": "^2.0",
         "laravel/framework": "5.6.*",
         "laravel/socialite": "^3.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "socialiteproviders/instagram": "^3.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
